--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "esbuild-register": "^3.4.2",
     "eslint": "^8.27.0",
     "prisma": "^4.12.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.8.4"
   },
   "engines": {
