--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "studio": "npx prisma studio"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
     "@prisma/client": "^4.12.0",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
+    "@tailwindcss/forms": "^0.5.3",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
